@@ -1613,10 +1613,10 @@ void    (* obj)(),(* constr)();
 #endif
 {
 	int  i,j,k,kk,ncg,ncf,nqprm0,nclin0,nctot0,infoqp,nqprm1,ncl,
-		nclin1,ncc,nff,nrowa0,nrowa1,ninq,nobb,nobbL,
+		nclin1=0,ncc,nff,nrowa0,nrowa1,ninq,nobb,nobbL,
 		nncn,ltem1,ltem2,display,need_d1;
 	//AK> theta = 0.0 to avoid unecessary breaks in the execution
-	double fmxl,vv,dx,dmx,dnm1,dnm,v0,v1,vk,temp1,temp2,theta=0.0,
+	double fmxl,vv,dx,dmx,dnm1,dnm,v0,v1,vk=0.,temp1,temp2,theta=0.0,
 		rhol,rhog,rho,grdfd0,grdfd1,dummy,grdgd0,grdgd1,thrshd,
 		sign,*adummy,dnmtil,*tempv;
 	ncg=ncf=*iskp=0;
@@ -2118,9 +2118,9 @@ struct  _parameter  *param;
 #endif
 {
 	int i,ii,j,jj,ij,k,iout,mnn,nqnp,zero,temp1,temp2,ncnstr_used,
-		numf_used;
+		numf_used=0;
 	int *iw_hold;
-	double x0i,xdi,*bj,*htemp,*atemp;
+	double x0i,xdi=0,*bj,*htemp,*atemp;
 
 	iout=6;
 	bj=make_dv(nrowa);
@@ -2283,7 +2283,7 @@ struct _objective  *ob;
 struct _parameter  *param;
 #endif
 {
-	int i,k,ii,jj,iout,j,mnn,zero,temp1,temp3,ncnstr_used,numf_used;
+	int i,k,ii,jj,iout,j,mnn,zero,temp1,temp3,ncnstr_used,numf_used=0;
 	int *iw_hold;
 	double x0i,eta,*atemp,*htemp,**a,*bj;
 
@@ -2419,9 +2419,9 @@ void    (* obj)(),(* constr)();
 void    *cd;
 #endif
 {
-	int  i,ii,ij,jj,itry,ikeep,j,job,nlin,mnm,ltem1,ltem2,reform,
+	int  i,ii,ij,jj,itry,ikeep,j,job,nlin,mnm=0,ltem1,ltem2,reform,
 		fbind,cdone,fdone,eqdone,display,sipldone;
-	double prod1,prod,dummy,fmax1,tolfe,ostep,temp,**adummy,fii;
+	double prod1,prod,dummy,fmax1=0.,tolfe,ostep,temp,**adummy,fii;
 
 	nlin=glob_info.nnineq-nineqn;
 	itry=ii=jj=1;
@@ -2749,7 +2749,7 @@ void    (* obj)(), (* constr)(),(* gradob)(), (* gradcn)();
 #endif
 {
 	int    i,j,k,ifail,np,mnm,done,display;
-	double dhd,gammd,etad,dummy,theta,signgj,psfnew,delta_s;
+	double dhd,gammd,etad,dummy,theta,signgj=0.,psfnew,delta_s;
 	double *tempv;
 
 	/* Check to see whether user-accessible stopping criterion
